[project]
name = "nldate"
version = "0.1.0"
description = "Natural-language date parser"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "python-dateutil>=2.9.0.post0",
]

[dependency-groups]
dev = [
    "mypy>=1.0",
    "pytest>=8.0",
    "ruff>=0.8",
    "types-python-dateutil>=2.9.0.20260508",
]

[tool.mypy]
strict = true

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
