[project]
name = "nldate"
version = "0.1.0"
description = "Natural-language date parser"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dateparser>=1.2.0",
    "parsedatetime>=2.6",
    "python-dateutil>=2.9.0.post0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nldate"]

[dependency-groups]
dev = [
    "mypy>=1.0",
    "pytest>=8.0",
    "ruff>=0.8",
    "types-python-dateutil>=2.9.0.20260508",
]

[tool.mypy]
strict = true

[[tool.mypy.overrides]]
module = ["dateparser", "parsedatetime"]
ignore_missing_imports = true

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]


[tool.hatch.build.targets.sdist]
include = ["src/dsc190_assignment06"]
